crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__alert_subscriptions__test__mask_alert_subscriptions_admin.snap
---
source: crates/control-plane-api/src/server/public/graphql/alert_subscriptions.rs
expression: response
---
{
  "data": {
    "alertSubscriptions": [
      {
        "catalogPrefix": "aliceCo/",
        "email": "alice@example.test"
      }
    ]
  },
  "errors": null
}
