crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__alert_subscriptions__test__mask_delete_alert_subscription_empty.snap
---
source: crates/control-plane-api/src/server/public/graphql/alert_subscriptions.rs
expression: response
---
{
  "data": null,
  "errors": [
    {
      "message": "PermissionDenied: alice@example.test is not authorized to access prefix or name 'aliceCo/' with required capability admin",
      "path": [
        "deleteAlertSubscription"
      ]
    }
  ]
}
