crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__alert_subscriptions__test__mask_update_alert_subscription_admin.snap
---
source: crates/control-plane-api/src/server/public/graphql/alert_subscriptions.rs
expression: response
---
{
  "data": {
    "updateAlertSubscription": {
      "catalogPrefix": "aliceCo/",
      "detail": "masked",
      "email": "alice@example.test"
    }
  },
  "errors": null
}
